@@ -1,3 +1,4 @@
+	* fix permissions issue on linux whith noatime enabled for non-owned files
 	* use random peer IDs in anonymous mode
 	* fix move_storage bugs
 	* fix unnecessary dependency on boost.date_time when building boost.asio as separate compilation
